--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@recipe-to-grocery/web",
+  "name": "@recipe-wiki/web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,8 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@recipe-to-grocery/eslint-config": "*",
-    "@recipe-to-grocery/typescript-config": "*",
+    "@recipe-wiki/eslint-config": "*",
+    "@recipe-wiki/typescript-config": "*",
     "typescript": "5.4.5",
     "@vitejs/plugin-react-swc": "3.6.0",
     "vite": "5.2.11"
@@ -33,11 +33,11 @@
     "web-vitals": "3.5.2",
     "usehooks-ts": "2.9.1",
     "@tanstack/react-query": "4.36.1",
-    "@recipe-to-grocery/ui": "*",
-    "@recipe-to-grocery/api": "*",
+    "@recipe-wiki/ui": "*",
+    "@recipe-wiki/api": "*",
     "@trpc/client": "10.45.2",
     "@trpc/react-query": "10.45.2",
     "@trpc/server": "10.45.2",
-    "@recipe-to-grocery/types": "*"
+    "@recipe-wiki/types": "*"
   }
 }
