--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "version": "1.0.0",
-  "description": "Share utils library for Recipe To Grocery apps",
+  "description": "Share utils library for Recipe Wiki apps",
   "repository": "https://github.com/rhyslawsn/recipe-wiki/",
   "license": "UNLICENSED",
   "private": true,
