--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@recipe-wiki/ui",
-  "version": "0.0.0",
   "exports": {
-    "./counter": "./components/counter.ts",
-    "./header": "./components/header.ts",
-    "./setup-counter": "./utils/counter.ts"
+    ".": "./src/index.ts"
   },
-  "license": "MIT",
-  "scripts": {
-    "lint": "eslint \"**/*.ts\""
+  "version": "1.0.0",
+  "description": "Shared UI library for Recipe Wiki apps",
+  "license": "UNLICENSED",
+  "private": true,
+  "dependencies": {
+    "@chakra-ui/react": "2.8.2",
+    "react": "18.3.1",
+    "react-helmet-async": "2.0.5"
   },
   "devDependencies": {
-    "@recipe-wiki/eslint-config": "*",
-    "@recipe-wiki/typescript-config": "*",
-    "typescript": "5.4.5"
+    "typescript": "5.1.6"
   }
 }
