feature(api): add the ability to find menus for any given site

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "5.12.1",
     "@supabase/supabase-js": "2.42.3",
     "@trpc/server": "10.45.2",
+    "axios": "1.7.2",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "csv-reader": "1.0.12",
@@ -34,6 +35,7 @@
     "tsconfig": "*",
     "util": "0.12.5",
     "uuid": "9.0.1",
+    "xml2js": "^0.6.2",
     "zod": "3.22.4"
   },
   "devDependencies": {
