--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
     "date-fns": "3.6.0",
     "date-fns-tz": "3.0.1",
     "dotenv": "16.4.5",
+    "jsdom": "^24.1.0",
     "lodash": "4.17.21",
     "prisma": "5.12.1",
     "trpc-shield": "0.4.4",
