--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "build": "yarn build:prisma && tsup-node",
     "build:cleanup": "rm -rf ./build",
     "build:prisma": "yarn prisma generate",
+    "start": "node build/main.js",
     "dev": "SET NODE_ENV=development && nodemon src/main.ts",
     "lint": "eslint --ext .ts .",
     "lint:fix": "eslint -- --fix --ext .ts ."
