--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "npx http-server ./build",
+    "start": "http-server ./build",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.ts\""
@@ -13,32 +13,33 @@
   "devDependencies": {
     "@recipe-wiki/eslint-config": "*",
     "@recipe-wiki/typescript-config": "*",
-    "typescript": "5.4.5",
     "@vitejs/plugin-react-swc": "3.6.0",
+    "typescript": "5.4.5",
     "vite": "5.2.11"
   },
   "dependencies": {
     "@chakra-ui/react": "2.8.2",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
+    "@recipe-wiki/api": "*",
+    "@recipe-wiki/types": "*",
+    "@recipe-wiki/ui": "*",
+    "@tanstack/react-query": "4.36.1",
+    "@trpc/client": "10.45.2",
+    "@trpc/react-query": "10.45.2",
+    "@trpc/server": "10.45.2",
     "@types/node": "20.12.8",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "framer-motion": "11.1.7",
+    "http-server": "14.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-helmet-async": "2.0.4",
-    "react-router-dom": "6.23.0",
     "react-icons": "5.2.0",
+    "react-router-dom": "6.23.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "3.5.2",
     "usehooks-ts": "2.9.1",
-    "@tanstack/react-query": "4.36.1",
-    "@recipe-wiki/ui": "*",
-    "@recipe-wiki/api": "*",
-    "@trpc/client": "10.45.2",
-    "@trpc/react-query": "10.45.2",
-    "@trpc/server": "10.45.2",
-    "@recipe-wiki/types": "*"
+    "web-vitals": "3.5.2"
   }
 }
