--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "http-server": "14.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-gtm-ts": "^1.0.45",
     "react-helmet-async": "2.0.4",
     "react-icons": "5.2.0",
     "react-router-dom": "6.23.0",
