--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@recipe-wiki/eslint-config": "*",
     "@recipe-wiki/typescript-config": "*",
-    "@vitejs/plugin-react-swc": "3.6.0",
+    "@vitejs/plugin-react": "4.3.1",
     "typescript": "5.4.5",
     "vite": "5.3.3"
   },
