feature(api): add ingredient and direction generation along with automated indexing

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,6 @@ public/dist
 /public
 
 # Ignore the data files
-./apps/api/partial-recpies.json
-./apps/api/places.csv
+/apps/api/partial-recipes.json
+/apps/api/places.csv
+/apps/api/recipe-wiki-424823-ea961f67d429.json
