--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,8 +30,10 @@
     "date-fns": "3.6.0",
     "date-fns-tz": "3.0.1",
     "dotenv": "16.4.5",
+    "googleapis": "^140.0.1",
     "jsdom": "^24.1.0",
     "lodash": "4.17.21",
+    "openai": "^4.55.0",
     "prisma": "5.12.1",
     "trpc-shield": "0.4.4",
     "tsconfig": "*",
